.k8s/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: realworld-ui
  labels:
    name: realworld-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-ui-app
  namespace: realworld-ui
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: realworld-ui-app
  template:
    metadata:
      labels:
        app: realworld-ui-app
    spec:
      containers:
      - name: apache-exporter-sidecar
        image: lusotycoon/apache-exporter
        resources:
          requests:
            cpu: "20m"
            memory: 16Mi
          limits:
            cpu: "100"
            memory: 128Mi
        args:
          - '--scrape_uri=http://localhost:8080/server-status?auto'
        ports:
          - containerPort: 9117
            protocol: TCP
      - name: realworld-ui-app
        image: meezaan/realworld-ui:$COMMIT_TAG
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 7
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: 100Mi
          limits:
            cpu: "300m"
            memory: 400Mi
        ports:
          - containerPort: 80
            protocol: TCP
---
#  Service
apiVersion: v1
kind: Service
metadata:
  name: realworld-ui-app
  namespace: realworld-ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: realworld-ui-app

---
apiVersion: v1
kind: Service
metadata:
  name: realworld-ui-app-metrics
  namespace: realworld-ui
  labels:
    name: realworld-ui-app-metrics
spec:
  type: ClusterIP
  selector:
    app: realworld-ui-app
  ports:
    - name: metrics
      port: 9117
      targetPort: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-ui-app-ingress
  namespace: realworld-ui
  annotations:
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: kong
spec:
  tls:
  - hosts:
    - realworld.tt.meezaan.net
    secretName: "realworld-ui-app-tls"
  rules:
  - host: realworld.tt.meezaan.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realworld-ui-app
            port:
              number: 80
